<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/tab_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/contact_selector"
        android:gravity="center_horizontal"
        android:text="@string/label_contact" />


    <ImageView
        android:id="@+id/tab_call_record"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/call_record_selector"
        android:gravity="center_horizontal"
        android:text="@string/label_call_record" />


    <ImageView
        android:id="@+id/tab_dialer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/dialer_pad_selector"
        android:gravity="center_horizontal"
        android:text="@string/label_dialer" />


    <ImageView
        android:id="@+id/tab_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/message_selector"
        android:gravity="center_horizontal"
        android:text="@string/label_message" />


    <ImageView
        android:id="@+id/tab_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/setting_selector"
        android:gravity="center_horizontal"
        android:text="@string/label_setting" />


</LinearLayout>